feat: white_list
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/docs/config/dfget-daemon.yaml
+++ b/docs/config/dfget-daemon.yaml
@@ -28,8 +28,8 @@ keep_storage: false
 scheduler:
   # below example is a stand address
   net_addrs:
-  - type: tcp
-    addr: 127.0.0.1:8002
+    - type: tcp
+      addr: 127.0.0.1:8002
   # schedule timeout
   schedule_timeout: 5m
 
@@ -150,30 +150,36 @@ proxy:
     # whether to ignore https certificate errors
     insecure: true
     # optional certificates if the remote server uses self-signed certificates
-    certs: [ ]
+    certs: []
     # whether to request the remote registry directly
     direct: false
 
   proxies:
-  # proxy all http image layer download requests with dfget
-  - regx: blobs/sha256.*
-  # change http requests to some-registry to https and proxy them with dfget
-  - regx: some-registry/
-    use_https: true
-  # proxy requests directly, without dfget
-  - regx: no-proxy-reg
-    direct: true
-  # proxy requests with redirect
-  - regx: some-registry
-    redirect: another-registry
+    # proxy all http image layer download requests with dfget
+    - regx: blobs/sha256.*
+    # change http requests to some-registry to https and proxy them with dfget
+    - regx: some-registry/
+      use_https: true
+    # proxy requests directly, without dfget
+    - regx: no-proxy-reg
+      direct: true
+    # proxy requests with redirect
+    - regx: some-registry
+      redirect: another-registry
 
   hijack_https:
     # key pair used to hijack https requests
     cert: ""
     key: ""
     hosts:
-    - regx: mirror.aliyuncs.com:443 # regexp to match request hosts
-      # whether to ignore https certificate errors
-      insecure: true
-      # optional certificates if the host uses self-signed certificates
-      certs: [ ]
+      - regx: mirror.aliyuncs.com:443 # regexp to match request hosts
+        # whether to ignore https certificate errors
+        insecure: true
+        # optional certificates if the host uses self-signed certificates
+        certs: []
+
+  white_list:
+    # the host of the whitelist
+    - host: ""
+      # port that need to be added to the whitelist
+      ports:
