feat: white list regx
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/docs/config/dfget-daemon.yaml
+++ b/docs/config/dfget-daemon.yaml
@@ -181,5 +181,7 @@ proxy:
   white_list:
     # the host of the whitelist
     - host: ""
+      # match whitelist hosts
+      regx:
       # port that need to be added to the whitelist
       ports:
