--- a/docs/config/dfget-daemon.yaml
+++ b/docs/config/dfget-daemon.yaml
@@ -1,41 +1,53 @@
 # daemon alive time, when sets 0s, daemon will not auto exit
+# it is useful for longtime running
 alive_time: 0s
 
 # daemon gc task running interval
 gc_interval: 1m0s
 
 # daemon pid location
-pid_file: /tmp/dfdaemon.pid
+# in linux, default value is /var/run/dfdaemon.pid
+# in macos(just for testing), default value is /tmp/dfdaemon.pid
+pid_file: /var/run/dfdaemon.pid
 
 # daemon lock file location
-# some lock file will only allow to run one daemon service
-lock_file: /tmp/dfdaemon.lock
+# same lock file will only allow to run one daemon service
+# in linux, default value is /var/run/dfdaemon.lock
+# in macos(just for testing), default value is /tmp/dfdaemon.lock
+lock_file: /var/run/dfdaemon.lock
 
 # daemon data directory
-data_dir: /tmp/dragonfly/dfdaemon/
+# in linux, default value is $HOME/.dragonfly/dfget-daemon/
+# in macos(just for testing), default value is /Users/$USER/.dragonfly/dfdaemon/
+data_dir: /var/lib/dragonfly
 
 # daemon work directory, daemon will change current working directory to this
-work_home: /tmp/dragonfly/dfdaemon/
+# in linux, default value is $HOME/.dragonfly/dfget-daemon/
+# in macos(just for testing), default value is /Users/$USER/.dragonfly/dfdaemon/
+work_home: /var/lib/dragonfly
 
 # when daemon exit, keep peer task data or not
 # it is usefully when upgrade daemon service, all local cache will be saved
-keep_storage: false
+# default is false
+keep_storage: true
 
 # all addresses of all schedulers
 # the schedulers of all daemons should be same in one region or zone.
 # daemon will send tasks to a fixed scheduler by hashing the task url and meta data
 # caution: only tcp is supported
 scheduler:
+  # schedule timeout
+  schedule_timeout: 30s
   # below example is a stand address
   net_addrs:
     - type: tcp
       addr: 127.0.0.1:8002
-  # schedule timeout
-  schedule_timeout: 5m
 
-# when enable, pprof will be enabled,
+# when enable, pprof will be enabled
 verbose: true
+# telemetry config
 telemetry:
+  # jaeger url, like: http://jaeger.dragonfly.svc:14268
   jaeger: ""
 
 # current host info used for scheduler
@@ -70,7 +82,9 @@ download:
     # download service listen address
     # current, only support unix domain socket
     unix_listen:
-      socket: /tmp/dfdaemon.sock
+      # in linux, default value is /var/run/dfdaemon.sock
+      # in macos(just for testing), default value is /tmp/dfdaemon.sock
+      socket: /var/run/dfdaemon.sock
   # peer grpc option
   # peer grpc service send pieces info to other peers
   peer_grpc:
@@ -89,9 +103,6 @@ download:
 #     port:
 #       start: 65000
 #       end: 65009
-
-# proxy config file location or detail config
-# proxy: ""
 
 # upload service option
 upload:
@@ -121,13 +132,17 @@ storage:
   # storage strategy when process task data
   # io.d7y.storage.v2.simple : download file to data directory first, then copy to output path, this is default action
   #                           the download file in date directory will be the peer data for uploading to other peers
-  # io.d7y.storage.v2.advance: download file directly to output path, avoid copy to output path
-  #                            fast than simple strategy, but:
-  #                            the output file will be the peer data for uploading to other peers
+  # io.d7y.storage.v2.advance: download file directly to output path with postfix, hard link to final output,
+  #                            avoid copy to output path, fast than simple strategy, but:
+  #                            the output file with postfix will be the peer data for uploading to other peers
   #                            when user delete or change this file, this peer data will be corrupted
+  # default is io.d7y.storage.v2.advance
   strategy: io.d7y.storage.v2.advance
 
-# proxy service option
+# proxy service config file location or detail config
+# proxy: ""
+
+# proxy service detail option
 proxy:
   security:
     insecure: true
