--- a/docs/config/scheduler.yaml
+++ b/docs/config/scheduler.yaml
@@ -18,7 +18,7 @@ worker:
 
 cdn:
   list:
-    - - cdn-name: "B-M75UMD6M-2153.local"
-        ip: "127.0.0.1"
-        rpc-port: 8003
-        download-port: 8001
+    - cdn-name: "B-M75UMD6M-2153.local"
+      ip: "127.0.0.1"
+      rpc-port: 8003
+      download-port: 8001
