--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        go-version: [ 1.14.x, 1.15.x ]
+        go-version: [ 1.15.x ]
         platform: [ ubuntu-latest, macos-11.0, macos-latest ]
     runs-on: ${{ matrix.platform }}
     steps:
@@ -32,7 +32,7 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        go-version: [ 1.14.x, 1.15.x ]
+        go-version: [ 1.15.x ]
         platform: [ ubuntu-latest, macos-11.0, macos-latest ]
     runs-on: ${{ matrix.platform }}
     steps:
