--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,15 +21,12 @@ jobs:
         platform:
           - ubuntu-latest
           - macos-latest
-        version:
-          - "latest"
-          - "v1.37"
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v2
       - uses: golangci/golangci-lint-action@v2
         with:
-          version: ${{ matrix.version }}
+          version: latest
 
   test:
     name: test
