--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,13 +11,12 @@ on:
       - feature/github
 
 jobs:
-
   lint:
     name: golangci-lint
     timeout-minutes: 10
     strategy:
       matrix:
-        go-version: [ 1.15 ]
+        go-version: [1.15]
         platform:
           - ubuntu-latest
           - macos-latest
@@ -33,17 +32,17 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        go-version: [ 1.15 ]
+        go-version: [1.15]
         platform:
           - ubuntu-latest
           - macos-latest
     runs-on: ${{ matrix.platform }}
     steps:
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go-version }}
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Test
-      run: go test -race -v ./...
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Test
+        run: go test -v ./pkg/dynconfig/...
