--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,27 +12,30 @@ on:
 
 jobs:
   lint:
-    name: golangci-lint
+    name: Lint
     timeout-minutes: 10
     strategy:
       matrix:
-        go-version: [1.15]
+        go-version: [ 1.14, 1.15 ]
         platform:
           - ubuntu-latest
           - macos-latest
     runs-on: ${{ matrix.platform }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: golangci/golangci-lint-action@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Golangci lint
+        uses: golangci/golangci-lint-action@v2
         with:
           version: latest
 
   test:
-    name: test
+    name: Test
     timeout-minutes: 10
     strategy:
       matrix:
-        go-version: [1.15]
+        go-version: [ 1.14, 1.15 ]
         platform:
           - ubuntu-latest
           - macos-latest
@@ -42,7 +45,32 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go-version }}
+
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Test
         run: go test -v ./pkg/dynconfig/...
+
+  build:
+    name: Build
+    timeout-minutes: 10
+    strategy:
+      matrix:
+        go-version: [ 1.14, 1.15 ]
+        platform:
+          - ubuntu-latest
+          - macos-latest
+    needs: [lint, test]
+    runs-on: ${{ matrix.platform }}
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: ${{ matrix.go-version }}
+
+      - name: Check out code
+        uses: actions/checkout@v1
+
+      - name: Build
+        run: make build
