--- a/.codecov.yml
+++ b/.codecov.yml
@@ -12,12 +12,13 @@ coverage:
         enabled: yes
         target: 95%
 
-comment:                  # this is a top-level key
+comment:               
   layout: "reach, diff, flags, files"
   behavior: default
-  require_changes: false  # if true: only post the comment if coverage changes
-  require_base: no        # [yes :: must have a base report to post]
-  require_head: yes       # [yes :: must have a head report to post]
-  branches:               # branch names that can post comment
+  require_changes: false  
+  require_base: no        
+  require_head: yes       
+  branches:               
     - master
     - feature/github
+    - chore/test
