--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,7 +66,8 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        go-version: [ 1.14, 1.15 ]
+        go-version:
+          - 1.15
         platform:
           - ubuntu-latest
           - macos-latest
