--- a/.codecov.yml
+++ b/.codecov.yml
@@ -19,6 +19,5 @@ comment:
   require_base: no        
   require_head: yes       
   branches:               
-    - master
-    - feature/github
-    - chore/test
+    - main
+    - main-rc
