chore: change codeowners
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,6 +3,5 @@
 # standard @username or @org/team-name format. You can also refer to a user by an
 # email address that has been added to their GitHub account, for example user@example.com
 
-.github/*                                  @dragonflyoss/dragonfly2-maintainers
-
 *                                          @dragonflyoss/dragonfly2-reviewers
+.github                                    @dragonflyoss/dragonfly2-maintainers
