chore: rename Dragonfly2 to Dragonfly
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/cdnsystem/config/cdn.yaml
+++ b/cdnsystem/config/cdn.yaml
@@ -65,7 +65,7 @@ plugins:
     - name: memory
       enable: true
       config:
-        baseDir: /tmp/memory/dragonfly2
+        baseDir: /tmp/memory/dragonfly
         gcConfig:
           youngGCThreshold: 100G
           fullGCThreshold: 5G
