--- a/hack/testdata/manager.yaml
+++ b/hack/testdata/manager.yaml
@@ -2,17 +2,22 @@ server:
   ip: ""
   port: 8004
 
-config-service:
+configure:
   store-name: "store1"
 
 stores:
-  -
-    name: "store1"
+  - name: "store1"
     type: "mysql"
     mysql:
-      user: "root"
-      password: "root1234"
-      ip: "db"
+      user: "xxx"
+      password: "xxx"
+      ip: "xxx"
       port: 3306
-      db: "config_db"
-      table: "config_table"
+      db: "xxx"
+
+host-service:
+  skyline:
+    domain: "xxx"
+    app-name: "xxx"
+    account: "xxx"
+    access-key: "xxx"
