--- a/docs/en/config/cdn.yaml
+++ b/docs/en/config/cdn.yaml
@@ -44,6 +44,9 @@ base:
   # StoragePattern is the pattern of storage policy, [disk/hybrid]
   storagePattern: disk
 
+  # Console shows log on console
+  console: false
+
 plugins:
   storage:
     - name: disk
@@ -76,3 +79,6 @@ verbose: false
 # listen port for pprof, only valid when the verbose option is true
 # default is random port
 pprofPort: 0
+
+# the service address that provides the configuration item
+configServer: 127.0.0.1:8004
