test: scheduler config
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/scheduler/config/testdata/scheduler.yaml
+++ b/scheduler/config/testdata/scheduler.yaml
@@ -1,5 +1,10 @@
 console: true
 verbose: true
+manager:
+  netAddrs:
+    - type: tcp
+      addr: 127.0.0.1:8004
+  expireTime: 1000
 scheduler:
   abtest: true
   ascheduler: "a-scheduler"
@@ -21,4 +26,3 @@ cdn:
 gc:
   taskDelay: 3600000
   peerTaskDelay: 3600000
-configServer: 127.0.0.1:8004
