feature: update client host config field type
Signed-off-by: Jim Ma <majinjing3@gmail.com>

--- a/docs/en/config/dfget-daemon.yaml
+++ b/docs/en/config/dfget-daemon.yaml
@@ -60,7 +60,15 @@ host:
   advertise_ip: 0.0.0.0
   # geographical location and network topology
   location: ""
-  idc: ""
+  # all attribute of host support two format
+  # idc: idc0 # static string
+  # or dynamic string from a shell command
+  # it's useful when cmdb is not enabled
+  idc:
+    command: echo idc1
+    regx: idc[\d]+
+    retry: 1
+    default: idc0
   security_domain: ""
   net_topology: ""
 
