--- a/scheduler/config/testdata/scheduler.yaml
+++ b/scheduler/config/testdata/scheduler.yaml
@@ -1,10 +1,11 @@
-console: true
-verbose: true
 manager:
   netAddrs:
     - type: tcp
       addr: 127.0.0.1:8004
+dynconfig:
   expireTime: 1000
+  path: foo
+  cachePath: bar
 scheduler:
   abtest: true
   ascheduler: "a-scheduler"
