feat: dynconfig netAddrs
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/scheduler/config/testdata/scheduler.yaml
+++ b/scheduler/config/testdata/scheduler.yaml
@@ -7,6 +7,9 @@ dynconfig:
   expireTime: 1000
   path: foo
   cachePath: bar
+  netAddrs:
+    - type: tcp
+      addr: 127.0.0.1:8002
 scheduler:
   abtest: true
   ascheduler: "a-scheduler"
