Refactor scheduler's dynconfig (#228)
* feat: scheduler's dynconfig

Signed-off-by: Gaius <gaius.qi@gmail.com>

* feat: cdn manager use dynconfig

Signed-off-by: Gaius <gaius.qi@gmail.com>

* test: scheduler config

Signed-off-by: Gaius <gaius.qi@gmail.com>

* feat: remove file

Signed-off-by: Gaius <gaius.qi@gmail.com>

* test: scheduler dynconfig

Signed-off-by: Gaius <gaius.qi@gmail.com>

* test: scheduler dynconfig

Signed-off-by: Gaius <gaius.qi@gmail.com>

* test: scheduler cdn manager

Signed-off-by: Gaius <gaius.qi@gmail.com>

* feat: scheduler dynconfig log

* feat: scheduler dynconfig observers

Signed-off-by: Gaius <gaius.qi@gmail.com>

* feat: remove scheduler dynconfig logger

Signed-off-by: Gaius <gaius.qi@gmail.com>

* test: scheduler mocks pkg rename mocks

Signed-off-by: Gaius <gaius.qi@gmail.com>

* feat: remove reflect.DeepEqual

Signed-off-by: Gaius <gaius.qi@gmail.com>

* feat: manager client

Signed-off-by: Gaius <gaius.qi@gmail.com>

* fix: scheduler start

Signed-off-by: Gaius <gaius.qi@gmail.com>

* feat: scheduler dynconfig

Signed-off-by: Gaius <gaius.qi@gmail.com>

* feat: dynconfig watch server

Signed-off-by: Gaius <gaius.qi@gmail.com>

* test: scheduler config

Signed-off-by: Gaius <gaius.qi@gmail.com>

* test: dynconfig

Signed-off-by: Gaius <gaius.qi@gmail.com>

* fix: manager CDN hosts

Signed-off-by: Gaius <gaius.qi@gmail.com>

* feat: rename scheduler dynconfig Start func

Signed-off-by: Gaius <gaius.qi@gmail.com>

* feat: dynconfig type

Signed-off-by: Gaius <gaius.qi@gmail.com>

* feat: manager keepalive

Signed-off-by: Gaius <gaius.qi@gmail.com>

* feat: dynconfig netAddrs

Signed-off-by: Gaius <gaius.qi@gmail.com>

* feat: scheduler config validate

Signed-off-by: Gaius <gaius.qi@gmail.com>

Co-authored-by: santong <weipeng.swp@alibaba-inc.com>

--- a/scheduler/config/testdata/scheduler.yaml
+++ b/scheduler/config/testdata/scheduler.yaml
@@ -1,5 +1,15 @@
-console: true
-verbose: true
+manager:
+  netAddrs:
+    - type: tcp
+      addr: 127.0.0.1:8004
+dynconfig:
+  type: 1
+  expireTime: 1000
+  path: foo
+  cachePath: bar
+  netAddrs:
+    - type: tcp
+      addr: 127.0.0.1:8002
 scheduler:
   abtest: true
   ascheduler: "a-scheduler"
@@ -21,4 +31,3 @@ cdn:
 gc:
   taskDelay: 3600000
   peerTaskDelay: 3600000
-configServer: 127.0.0.1:8004
