--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,6 @@ vendor/
 .idea
 .cache
 *.DS_Store
-.DS_Store
 target/
 log
 scheduler/test/misc
@@ -32,3 +31,32 @@ mysql
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
