feat: lint workflows
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Golangci lint
         uses: golangci/golangci-lint-action@v2
         with:
-          version: latest
+          version: v1.29
 
   test:
     name: Test
