--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,7 +50,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run Unit tests.
-        run: make test-coverage
+        run: sudo make test-coverage
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
