--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,12 @@ name: CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main, release-* ]
   pull_request:
-    branches:
-      - main
+    branches: [ main, release-* ]
+
+env:
+  GO_VERSION: '1.15'
 
 jobs:
   lint:
@@ -14,8 +15,6 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        go-version: 
-          - 1.15
         platform:
           - ubuntu-latest
           - macos-latest
@@ -25,7 +24,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Golangci lint
-        uses: golangci/golangci-lint-action@v2.5.2
+        uses: golangci/golangci-lint-action@v2
         with:
           version: latest
 
@@ -34,8 +33,6 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        go-version:
-          - 1.15
         platform:
           - ubuntu-latest
           - macos-latest
@@ -44,28 +41,26 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: ${{ env.GO_VERSION }}
 
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Run Unit tests.
+      - name: Run Unit tests
         run: sudo make test-coverage
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
-          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.txt
-          flags: unittests # optional
+          flags: unittests
 
   build:
     name: Build
     timeout-minutes: 10
     strategy:
       matrix:
-        go-version:
-          - 1.15
         platform:
           - ubuntu-latest
           - macos-latest
@@ -73,12 +68,12 @@ jobs:
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Set up Go
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v2
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: ${{ env.GO_VERSION }}
 
       - name: Check out code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
 
       - name: Build
         run: make build
