chore: language go
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'go' ]
+        language: [ go ]
 
     steps:
       - name: Checkout repository
