--- a/hack/packaging/systemd/dfget-daemon.service
+++ b/hack/packaging/systemd/dfget-daemon.service
@@ -11,7 +11,7 @@ After=network.target
 [Service]
 Type=simple
 ExecStartPre=/opt/dragonfly/fix.dfget-daemon.cpuset.sh
-ExecStart=/usr/bin/dfget daemon --config /etc/dragonfly/dfget-daemon.yaml
+ExecStart=/usr/bin/dfget daemon
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=always
 Slice=dragonfly.slice
