feat: refactor cdn storage module & remove unused ctx
Signed-off-by: santong <weipeng.swp@alibaba-inc.com>

--- a/docs/en/config/cdn.yaml
+++ b/docs/en/config/cdn.yaml
@@ -32,10 +32,6 @@ base:
   # default: 2m0s
   gcMetaInterval: 2m
 
-  # gcStorageInterval is the interval time to execute GC storage.
-  # default: 15s
-  gcStorageInterval: 15s
-
   # TaskExpireTime when a task is not accessed within the taskExpireTime,
   # and it will be treated to be expired.
   # default: 3m0s
@@ -45,25 +41,47 @@ base:
   storagePattern: disk
 
 plugins:
-  storage:
+  storageDriver:
     - name: disk
       enable: true
       config:
         baseDir: /tmp/cdnsystem2
-        gcConfig:
-          youngGCThreshold: 100G
-          fullGCThreshold: 5G
-          cleanRatio: 1
-          intervalThreshold: 2h
     - name: memory
       enable: true
       config:
         baseDir: /tmp/memory/dragonfly
-        gcConfig:
-          youngGCThreshold: 100G
-          fullGCThreshold: 5G
-          cleanRatio: 3
-          intervalThreshold: 2h
+
+  storageManager:
+    - name: disk
+      enable: true
+      config:
+        gcInitialDelay: 5s
+        gcInterval: 15s
+        drivers:
+          - name: disk
+            gcConfig:
+              youngGCThreshold: 100G
+              fullGCThreshold: 5G
+              cleanRatio: 1
+              intervalThreshold: 2h
+    - name: hybrid
+      enable: false
+      config:
+        gcInitialDelay: 5s
+        gcInterval: 15s
+        drivers:
+          - name: disk
+            gcConfig:
+              youngGCThreshold: 100G
+              fullGCThreshold: 5G
+              cleanRatio: 1
+              intervalThreshold: 2h
+          - name: memory
+            gcConfig:
+              youngGCThreshold: 100G
+              fullGCThreshold: 5G
+              cleanRatio: 3
+              intervalThreshold: 2h
 
 # Console shows log on console
 # default: false
