--- a/cdnsystem/config/testdata/config/cdn.yaml
+++ b/cdnsystem/config/testdata/config/cdn.yaml
@@ -35,8 +35,8 @@ base:
   # default: 3m0s
   taskExpireTime: 3m
 
-  # StoragePattern is the pattern of storage policy, [disk/hybrid]
-  storagePattern: disk
+  # storageMode is the mode of storage policy, [disk/hybrid]
+  storageMode: disk
 
 plugins:
   storageDriver:
