add installation.namespace config for helm chart
Signed-off-by: yxxhero <aiopsclub@163.com>

--- a/deploy/charts/dragonfly/templates/cdn-deploy.yaml
+++ b/deploy/charts/dragonfly/templates/cdn-deploy.yaml
@@ -8,6 +8,7 @@ metadata:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
   name: {{ template "dragonfly.cdn.fullname" . }}
+  namespace: {{ .Values.installation.namespace }}
   {{- if .Values.cdn.deploymentAnnotations }}
   annotations:
 {{ toYaml .Values.cdn.deploymentAnnotations | indent 4 }}
