--- a/deploy/charts/dragonfly/values.yaml
+++ b/deploy/charts/dragonfly/values.yaml
@@ -1,6 +1,10 @@
 nameOverride: ""
 fullnameOverride: ""
 
+# values for dragonfly installation
+installation:
+  namespace: kube-system
+
 scheduler:
   name: scheduler
   replicas: 1
