--- a/deploy/charts/dragonfly/templates/dfdaemon-configmap.yaml
+++ b/deploy/charts/dragonfly/templates/dfdaemon-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "dragonfly.dfdaemon.fullname" . }}
+  namespace: {{ .Values.installation.namespace }}
   labels:
     app: {{ template "dragonfly.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
