--- a/deploy/charts/dragonfly/templates/dfdaemon-daemonset.yaml
+++ b/deploy/charts/dragonfly/templates/dfdaemon-daemonset.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: {{ template "dragonfly.dfdaemon.fullname" . }}
+  namespace: {{ .Values.installation.namespace }}
   labels:
     app: {{ template "dragonfly.dfdaemon.fullname" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
