--- a/deploy/charts/dragonfly/templates/scheduler-deploy.yaml
+++ b/deploy/charts/dragonfly/templates/scheduler-deploy.yaml
@@ -7,6 +7,7 @@ metadata:
     component: "{{ .Values.scheduler.name }}"
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
+  namespace: {{ .Values.installation.namespace }}
   name: {{ template "dragonfly.scheduler.fullname" . }}
   {{- if .Values.scheduler.deploymentAnnotations }}
   annotations:
