--- a/deploy/charts/dragonfly/templates/scheduler-svc.yaml
+++ b/deploy/charts/dragonfly/templates/scheduler-svc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{template "dragonfly.scheduler.fullname" . }}
+  namespace: {{ .Values.installation.namespace }}
   labels:
     app: {{ template "dragonfly.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
