feat: add dynconfig get cdn infos from directory
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/scheduler/config/testdata/scheduler.yaml
+++ b/scheduler/config/testdata/scheduler.yaml
@@ -3,7 +3,7 @@ manager:
     - type: tcp
       addr: 127.0.0.1:8004
 dynconfig:
-  type: 1
+  type: local
   expireTime: 1000
   path: foo
   cachePath: bar
