--- a/docs/en/config/dfget.yaml
+++ b/docs/en/config/dfget.yaml
@@ -129,6 +129,8 @@ storage:
   strategy: io.d7y.storage.v2.advance
   # disk quota gc threshold, when the quota of all tasks exceeds the gc threshold, oldest tasks will be reclaimed.
   disk_gc_threshold: 50Gi
+  # set to ture for reusing underlying storage for same task id
+  multiplex: true
 
 # proxy service config file location or detail config
 # proxy: ""
