--- a/deploy/kustomize/single-cluster-native/bases/cdn/statefulset.yaml
+++ b/deploy/kustomize/single-cluster-native/bases/cdn/statefulset.yaml
@@ -73,7 +73,7 @@ spec:
           cp /etc/dragonfly/nginx.conf /etc/nginx/nginx.conf
           nginx
           exec /opt/dragonfly/df-cdn/cdn
-        image: d7yio/cdn
+        image: dragonflyoss/cdn
         imagePullPolicy: "Always"
         ports:
         - containerPort: 8001
