--- a/deploy/kustomize/single-cluster-native/bases/scheduler/statefulset.yaml
+++ b/deploy/kustomize/single-cluster-native/bases/scheduler/statefulset.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: scheduler
-        image: d7yio/scheduler
+        image: dragonflyoss/scheduler
         imagePullPolicy: "Always"
         ports:
         - containerPort: 8002
