--- a/deploy/kustomize/single-cluster-openkruise/bases/dfdaemon/daemonset.yaml
+++ b/deploy/kustomize/single-cluster-openkruise/bases/dfdaemon/daemonset.yaml
@@ -22,18 +22,27 @@ spec:
         app: dragonfly
         component: dfdaemon
     spec:
-      hostNetwork: false
       serviceAccountName: dfdaemon
       containers:
       - name: dfdaemon
-        image: d7yio/dfdaemon
+        image: dragonflyoss/dfget
         imagePullPolicy: "Always"
         volumeMounts:
         - name: config
           mountPath: /etc/dragonfly
-        ports:
-        - containerPort: 65001
+        - name: netns # the mountPath is setting in proxy.tcp_listen.namespace
+          mountPath: /host/ns/net
+        ports: # 65001 is in host network, no need here
+        - containerPort: 65000
+        - containerPort: 65002
+        securityContext:
+          capabilities:
+            add:
+            - SYS_ADMIN # setns need CAP_SYS_ADMIN capability
       volumes:
       - name: config
         configMap:
           name: dfdaemon
+      - name: netns
+        hostPath:
+          path: /proc/1/ns/net # bind mount host net ns to pod, dfdaemon can listen 65001 in host network
