--- a/docs/en/config/cdn.yaml
+++ b/docs/en/config/cdn.yaml
@@ -95,5 +95,8 @@ verbose: false
 # default is random port
 pprofPort: 0
 
-# the service address that provides the configuration item
-configServer: 127.0.0.1:8004
+# manager configuration
+manager:
+  netAddrs:
+    - type: tcp
+      addr: "127.0.0.1:65003"
