--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,6 +1,8 @@
 before:
   hooks:
     - go mod download
+    - go install github.com/golang/mock/mockgen@v1.6.0
+    - go generate ./...
 
 builds:
   - main: ./cmd/dfget
