Goreleaser added mockgen (#379)
* feat: add mockgen

Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,6 +1,7 @@
 before:
   hooks:
     - go mod download
+    - go install github.com/golang/mock/mockgen@v1.6.0
     - go generate ./...
 
 builds:
